--- a/src/components/auth/Registration/App.css
+++ b/src/components/auth/Registration/App.css
@@ -4,13 +4,12 @@
     box-sizing: border-box;
 }
 .registration{
-    width: 1920px;
-    height: 1080px;
+    width: 100%;
+    height: 1101px;
     background: linear-gradient(#5CA7BE, #8444D4);
     margin-left: 50%;
     transform: translate(-50%);
     display: flex;
-    margin-top:10px ;
     justify-content: center;
     align-items: center;
 }
