--- a/src/components/auth/Registration/App.css
+++ b/src/components/auth/Registration/App.css
@@ -5,7 +5,7 @@
 }
 .registration{
     width: 100%;
-    height: 1101px;
+    height: 100vh;
     background: linear-gradient(#5CA7BE, #8444D4);
     margin-left: 50%;
     transform: translate(-50%);
