--- a/src/components/auth/Registration/App.css
+++ b/src/components/auth/Registration/App.css
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
 }
-.regForm{
+.regForm, .AuthForm{
     width: 754px;
     height: 540px;
     background: #ffffff;
