--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -3,6 +3,11 @@
     margin-top: 20px;
 
 }
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .post-img{
   width: 100%;
@@ -13,6 +18,26 @@
 .incons-post{
     display: flex;
     gap: 12px;
+}
+
+.user {
+  margin-left: auto;
+  background: #ffffff62;
+  color: #ffffff;
+  right: 0;
+  position: absolute;
+}
+
+.user__profile {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  align-items: center;
+}
+
+.user-photo {
+  border-radius: 50%;
+  width: 50%;
 }
 
 .cnDetileCardLikeIcon{
@@ -50,37 +75,3 @@
   .liked {
     color: red;
   }
-
-.myImage{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
-    height: 500px;
-    border-radius: 5px;
-}
-.comment-p3{
-    color: #fefefe;
-    position: absolute;
-    top: 91.5%;
-    left: 49.5%;
-    transform: translate(-50%, -50%);
-    max-width: 380px;
-
-}
-.comment-count-w1{
-    color: #fefefe;
-    position: absolute;
-    top: 85%;
-    left: 40.5%;
-    transform: translate(-50%, -50%);
-}
-.fa-regular.fa-comment{
-    position: absolute;
-    top: 80.2%;
-    left: 39%;
-    transform: translate(-50%, -50%);
-    font-size: 24px;
-    color: #fefefe;
-}
