--- a/src/components/auth/Login/Login.css
+++ b/src/components/auth/Login/Login.css
@@ -4,12 +4,6 @@
     box-sizing: border-box;
 }
 
-
-body {
-    background: linear-gradient(#5CA7BE, #8444D4);
-    /* background-color: red; */
-}
-
 .Container {
     width: 100%;
     height: 100vh;
@@ -72,7 +66,7 @@ body {
     font-size: 16px;
     padding-left: 19px;
 }
-button {
+.button {
     width: 550px;
     height: 58px;
     border: 1px solid #000000;
